test/test_wrong_argument_number/test_wrong_argument_number.mvs
func a(b: int, c: float, d: bool) {}
a(5, 2.0);
